--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 // Component Imports
-import Button from '../components/Button.astro';
+// import Button from '../components/Button.astro';
 import '../styles/global.css';
 
 // Full Astro Component Syntax:
@@ -11,7 +11,7 @@ import '../styles/global.css';
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<title>Astro + TailwindCSS</title>
+		<title>pioo furniture</title>
 	</head>
 
 	<body>
